cal: attempt to fix "jump into video call" link

--- a/home-manager/waybar.css
+++ b/home-manager/waybar.css
@@ -106,6 +106,9 @@ window#waybar {
 #custom-cal.user-1 {
     background: #f67755;
 }
+#custom-cal.user-2 {
+    background: #33b679;
+}
 
 #tray {
     background-color: #2980b9;
